name:                midiToBeep
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/fegies/midiToBeep#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Giese
maintainer:          s4fegies@uni-trier.de
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable midiToBeep
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HCodecs >= 0.5 && < 1, split >= 0.2 && < 1, directory >= 1.3 && < 2
